--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,29 @@
-# .dockerignore
+# --- Dependencies & build output ---
 node_modules
 dist
+coverage
+.cache
+
+# --- Git & Editor ---
 .git
 .gitignore
+.vscode
+.idea
+
+# --- Docker ---
 Dockerfile
 docker-compose.yml
-yarn-error.log
-.env
-.vscode
+
+# --- Logs ---
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# --- Environment files ---
+.env*
+!.env.example
+
+# --- OS / misc ---
+.DS_Store
+Thumbs.db
