--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:staging": "node dist/src/main.js",
-    "start:prod": "node dist/src/main.js",
+    "start:staging": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "build": "nest build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
