--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,17 @@ version: '3.9'
 services:
   db:
     image: postgres:16-alpine
-    container_name: nestshop-db
-    restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: nestshop
     ports:
       - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nestshop-app
-    restart: always
-    depends_on:
-      - db
+    build: .
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db:5432/nestshop?schema=public"
-      JWT_SECRET: "supersecret"
-      JWT_REFRESH_SECRET: "superrefreshsecret"
       NODE_ENV: "production"
-    command: ["/app/entrypoint.sh"]
-
-volumes:
-  pgdata:
+    ports:
+      - "8080:8080"
